Edit form now shows correct constraints.
Also includes other fixes needed while doing this:

* Change how line IDs are generated; more likely to be unique.
* Fixed constraints for home_work in dataManager.
* Changes to allow for 'Alone...' people constraints.
  (because that's based on all other people constraints being 0).
* Fix bottom of line edit form being hidden by buttons etc.

--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ body {
 #line-edit {
   height: 80%;
   position: relative;
+  overflow: hidden;
 }
 #line-edit-body {
   overflow-y: auto;
@@ -203,7 +204,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 1em 30px;
+  padding: 1em 30px 6em 30px;
   width: 100%;
   height: 100%;
 }
